welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:31: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^ColumnByColumn:34: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^ColumnByColumn:37: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^ColumnByColumn:40: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^ColumnByColumn:43: error: Missing closing brace `}' assumed here
}
^